chore: update styles and add more info

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+  background: #eae9e6;
+}
+
 th {
   font-weight: normal;
 }
@@ -6,6 +10,32 @@ th {
   td, th {
     padding-left: 0;
   }
+}
+
+.top-row {
+  position: relative;
+  background-color: #5885AF;
+  color: #efdecd;
+  padding: 0 10px;
+}
+.contact {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  text-align: right;
+}
+.contact a {
+  color: #efdecd;
+}
+
+@media (max-width: 40rem) {
+  .contact {
+    position: static;
+  }
+}
+
+.row .skills td:first-child {
+  font-weight: bold;
 }
 
 @media print, (min-width: 40rem) {
@@ -37,15 +67,9 @@ th {
   }
 }
 
-
-
 .experience h4 {
   margin-bottom: 0;
 }
-/* .experience em {
-  display: block;
-  margin-bottom: 10px;
-} */
 .experience .period {
   text-align: right;
 }
@@ -76,10 +100,5 @@ th {
   .experience .column .column {
     display: inline-block;
     width: 48%;
-  }
-
-  /* hack */
-  .experience-1 {
-    margin-bottom: 200px;
   }
 }
