--- a/styles.css
+++ b/styles.css
@@ -1,234 +1,57 @@
 body {
-  background: #eae9e6;
-  color: #17181a;
-}
-
-th {
-  font-weight: normal;
+  padding-bottom: 2em;
 }
 
 @media (max-width: 450px) {
-  td, th {
-    padding-left: 0;
+
+  .terminal-timeline::before {
+    left: 15px;
+  }
+
+  .terminal-timeline .terminal-card::before {
+    left: 7px;
+  }
+
+  .terminal-timeline {
+    padding-left: 32px;
   }
 }
 
-hr {
-  border-top: 0.1rem solid #b9b9b9;
-}
 
-.top-row {
-  -webkit-print-color-adjust: exact !important;
+.grid-container {
+  width: 100%;
   position: relative;
-  background-color: #1000ff;
-  color: #efdecd;
-  padding: 0;
-  padding-left: 1em;
-  margin-bottom: 2rem;
-  min-height: 145px;
-
-  -webkit-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-    -webkit-transition-property: color, background-color;
-    transition-property: color, background-color;
-}
-.top-row:hover {
-  -webkit-animation-name: hvr-back-pulse;
-    animation-name: hvr-back-pulse;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-delay: 0.5s;
-    animation-delay: 0.5s;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    background-color: #2098D1;
-    background-color: #2098d1;
-    color: white;
-}
-
-@-webkit-keyframes hvr-back-pulse {
-  50% {
-    background-color: rgba(32, 152, 209, 0.75);
-  }
-}
-@keyframes hvr-back-pulse {
-  50% {
-    background-color: rgba(32, 152, 209, 0.75);
-  }
-}
-
-.top-row .top {
-  padding: 0;
-}
-
-.contact {
-  position: absolute;
-  top: 10px;
-  right: 0;
-  text-align: right;
-  margin-right: 20px;
-  margin-bottom: 20px;
-}
-.contact a {
-  color: #efdecd;
-}
-
-@media (max-width: 700px) {
-  .contact {
-    position: static;
-  }
-}
-
-.main-row {
-  justify-content: space-between;
-}
-@media (max-width: 450px) {
-  .main-row {
-    flex-direction: column-reverse;
-  }
-}
-
-.row .skills td:first-child {
-  font-weight: bold;
-}
-
-@media print, (min-width: 450px) {
-  .row .skills {
-    flex: 0 0 45%;
-    max-width: 45%;
-  }
-
-  .top {
-    text-align: center;
-  }
-
-  .about {
-    justify-content: center;
-  }
-  .about > .column {
-    flex: 0 0 70%;
-    max-width: 70%;
-  }
-  .about h2 {
-    text-align: center;
-  }
-}
-
-@media (min-width: 450px) {
-  .row .experience {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
-}
-
-.experience h4 {
-  margin-bottom: 0;
-}
-.experience .period {
-  text-align: right;
-}
-
-
-@media print {
-  .row {
-    display: block !important;
-  }
-  .column {
-    display: inline-block !important;
-  }
-
-  .about > .column {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
-  }
-
-  .skills {
-    float: left;
-  }
-  .row .experience {
-    flex: 0 0 50%;
-    max-width: 50%;
-    margin-left: 20px;
-  }
-  .experience .column .column {
-    display: inline-block;
-    width: 48%;
-  }
-}
-
-/* .skills h2, .experience h2 {
-  border-bottom: 1px solid #606c76;
-} */
-
-.underline {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgb(0 0 0 / 0%);
-  position: relative;
-  overflow: hidden;
-}
-.underline:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 0;
   bottom: 0;
-  background: #2098D1;
-  height: 4px;
-  -webkit-transition-property: right;
-  transition-property: right;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-  right: 100%;
+  left: 0;
+  overflow-x: hidden;
 }
 
-.underline:hover:before {
+.grid-container:after {
+  -webkit-mask-image: -webkit-gradient(linear, left 90%, left top, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
+  mask-image: gradient(linear, left 90%, left top, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
+  transform: perspective(200px) rotateX(40deg) scale(2, 1) translateZ(0);
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
   right: 0;
+  width: 100%;
+  height: 100vh;
+  padding: 1px;
+  -webkit-background-clip: content-box;
+  -webkit-backface-visibility: hidden;
+  outline: 1px solid transparent;
+  transform-origin: bottom center;
+  will-change: transform;
 }
 
-@keyframes hvr-bob {
-  0% {
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
-}
-
-50% {
-    -webkit-transform: translateY(-4px);
-    transform: translateY(-4px);
-}
-100% {
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
-}
-}
-
-.hvr-bob {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-}
-.hvr-bob:hover, .hvr-bob:focus, .hvr-bob:active {
-  -webkit-animation-name: hvr-bob-float, hvr-bob;
-  animation-name: hvr-bob-float, hvr-bob;
-  -webkit-animation-duration: .5s;
-  animation-duration: .5s;
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s;
-  -webkit-animation-timing-function: ease-out, ease-in-out;
-  animation-timing-function: ease-out, ease-in-out;
-  -webkit-animation-iteration-count: 1, infinite;
-  animation-iteration-count: 1, infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  -webkit-animation-direction: normal, alternate;
-  animation-direction: normal, alternate;
+.grid-container:after {
+  opacity: 0.3;
+  pointer-events: none;
+  background-position: center bottom;
+  background-size: 40px 40px;
+  background-image:
+    linear-gradient(to right, #d783ee 2px, transparent 2px),
+    linear-gradient(to bottom, #80119e 1px, transparent 2px)
 }
